removed px on 0 margins

--- a/code/style.css
+++ b/code/style.css
@@ -11,14 +11,14 @@ html {
 
 .logo {
   margin-top: 10px;
-  margin-right: 0px;
+  margin-right: 0;
   width: 350px;
   display: none;
 }
 
 .logosmall {
   margin-left: 30px;
-  margin-right: 0px;
+  margin-right: 0;
   width: 350px;
 }
 
@@ -117,7 +117,7 @@ h2 {
 
 .morenewstext {
   font-size: 15px;
-  margin-bottom: 0px;
+  margin-bottom: 0;
   margin-top: 10px;
   margin-right: 5px;
 }
@@ -160,7 +160,7 @@ footer img{
             display: grid;
             text-align: center, right;
             grid-template-columns: 1fr;
-            column-gap: 0px;
+            column-gap: 0;
           }
           .more-news-picture {
             width: 375px;
@@ -174,7 +174,7 @@ footer img{
           h2 {
             font-size: 25px;
             margin-top: 10px;
-            margin-bottom: 0px;
+            margin-bottom: 0;
           }
           .grid-parent {
             display: grid;
@@ -196,17 +196,17 @@ footer img{
             display: grid;
             text-align: center, right;
             grid-template-columns: 1fr 1fr;
-            column-gap: 0px;
+            column-gap: 0;
           }
           .bignewstext {
             font-size: 19px;
-            margin-bottom: 0px;
+            margin-bottom: 0;
             margin-right: 40px;
           }
           .bignewspicture {
             width: 300px;
             height: 100%;
-            margin-bottom: 0px;
+            margin-bottom: 0;
           }
           nav {
             margin-top: 40px;
@@ -227,7 +227,7 @@ footer img{
           }
           .logo {
             margin-top: 20px;
-            margin-right: 0px;
+            margin-right: 0;
             width: 400px;
           }
           .more-news-grid {
@@ -238,7 +238,7 @@ footer img{
             display: grid;
             text-align: center, right;
             grid-template-columns: 1fr;
-            column-gap: 0px;
+            column-gap: 0;
           }
           .more-news-picture {
             width: 325px;
@@ -252,7 +252,7 @@ footer img{
           h2 {
             font-size: 20px;
             margin-top: 20px;
-            margin-bottom: 0px;
+            margin-bottom: 0;
           }
           .grid-parent {
             display: grid;
@@ -284,7 +284,7 @@ footer img{
           .bignewspicture {
             width: 600px;
             height: 500px;
-            margin-bottom: 0px;
+            margin-bottom: 0;
           }
           
           nav {
