added linebreaks to big news text

--- a/code/style.css
+++ b/code/style.css
@@ -87,6 +87,7 @@ h1 {
   font-size: 16px;
   margin-bottom: 20px;
   margin-top: 10px;
+  display: inline-block;
 }
 
 .grid-item {
@@ -202,6 +203,7 @@ footer img{
             font-size: 19px;
             margin-bottom: 0;
             margin-right: 40px;
+            display: inline-block;
           }
           .bignewspicture {
             width: 300px;
@@ -280,6 +282,7 @@ footer img{
             font-size: 30px;
             margin-bottom: 20px;
             margin-right: 40px;
+            display: inline-block;
           }
           .bignewspicture {
             width: 600px;
