--- a/code/style.css
+++ b/code/style.css
@@ -1,99 +1,131 @@
-html { background-color: rgb(255, 255, 255);
+html { background-color: rgb(229, 217, 208);
+}
+
+header{
+  background-image: linear-gradient(
+    rgb(162, 112, 60), rgb(255, 255, 255));
+}
+
+footer{
+  background-color: rgb(140, 114, 99);
+  color: white;
+  text-align: center;
+  padding: 5px;
+}
+
+.navbar {
+  background-color: rgb(140, 114, 99);
+  padding: 10px;
+}
+
+.navbar a {
+  color: #ded6d6;
+  text-decoration: none;
+  font-size: 14px;
+  font-weight: bold;
+  padding: 5px;
+}
+
+.navbar a:hover {
+  background-color: #f4eaea;
+  color: black;
 }
 
 body {
   min-height: 100vh;
   align-items: center;
-  color: #262323;
+  color: #403a3a;
   font-family: 'Rise of Kingdom', sans-serif;
   text-transform: uppercase;
 }
 
 h1{
-  display: inline;
-  font-size: 55px;
-  color: #FDEEDA;
-  text-shadow: 4px 2px #000000;
+  font-size: 36px;
+  color: #fffefe;
+  text-shadow: 2px 2px #000000;
+  display: inline-block;
+  margin: 10px 0px;
 }
 
-p{
-  max-width: 80%;
+h2{
+  font-size: 32px;
 }
 
-header img{
+#column{
   width: 40px;
-  height: 60px;
-  margin-top: 5px;
+  height: 40px;
+  object-fit: contain;
+  margin: 9px -16px -5px 0px;
 }
 
-.big-news img{
-  width: 80%;
-  margin-top: 30px;
-  object-fit: cover;
+#troyan{
+  width:60%;
+  object-fit: contain;
 }
+
 
 .small-news img{
-  width: 50%;
+  width: 40%;
   object-fit: cover;
   border: 10px solid #FDEEDA;
-  align-items: center;
-}
-
-header{
-    background-image: linear-gradient(rgb(152, 100, 61), rgb(217, 233, 233));
-  display: block;
-}
-
-.navbar {
-  background-color: rgb(73, 70, 70);
-  padding: 12px;
-}
-
-.navbar a {
-  color: #a09e9e;
-  padding: 10px;
-  text-decoration: none;
-  font-size: 17px;
-  font-weight: bold;
-}
-
-.navbar a:hover {
-  background-color: rgb(255, 255, 234);
-  color: black;
-}
-
-.main-container{
-  display: grid;
-  grid-template-columns: 1fr;
 }
 
 .news-container{
   display: grid;
   grid-template-columns: 1fr;
-  grid-gap: 20px;
   background-image: url("https://cdn.pixabay.com/photo/2015/12/03/08/50/paper-1074131_960_720.jpg");
   background-color: #ccc37f;
-  justify-items: center;
+  padding: 20px 10px 60px 10px;
+}
+
+.news{
+  margin: 10px;
 }
 
 .big-news{
-  grid-column: 1 / -1;  
-}
-
-article{
-  width: 90%;
-  display: inline-block;
+  grid-column: 1 / -1;
 }
 
 
 @media (min-width: 668px) and (max-width: 1024px){
   .news-container{
     grid-template-columns: repeat(2, 1fr);
+    gap: 10px;
+  }
+  .small-news{
+    display: flex;
+    justify-content: center;
+    align-items: flex-start;
+    gap: 20px;
+  }
+  .small-news img{
+    width: 40%;
+    margin-top: 18.72px;
+  }
+   .big-news{display: flex;
+  gap: 20px;
+  }
+
+  #troyan{
+      width: 50%;
+      height: auto;
+      padding-top: 26px;
   }
 }
 
 @media (min-width: 1024px){
   .news-container{
     grid-template-columns: repeat(4, 1fr);
+  }
+  .small-news img{
+    width: 70%;
+  }
+  .big-news{display: flex;
+  gap: 20px;
+  }
+  
+  #troyan{
+  margin-top: 26px;
+    max-width: 50%;
   }
 }
