--- a/code/style.css
+++ b/code/style.css
@@ -1,4 +1,360 @@
-html {
-  background: #0025ff;
-  color: #fff;
+* { 
+  box-sizing: border-box;
 }
+body { 
+  margin: 10px;
+  font-family: 'Times New Roman', Times, serif;
+  background-color:rgb(235, 198, 204);
+    
+}
+
+img.icon {
+  width: 50px;
+  height: 50px;
+  display: flex;
+  float: left;
+  margin: 10px;
+}
+
+.header {
+  overflow: hidden;
+  background-color:#d3f2eb;
+  padding: 5px 5px;
+  border-radius: 10px;
+}
+
+
+.header a {
+  float: left;
+  color: black;
+  text-align: center;
+  padding: 8px;
+  text-decoration: none;
+  font-size: 14px; 
+  line-height: 25px;
+  border-radius: 4px;
+  margin: 2px;
+}
+
+.header a.logo {
+  font-size: 25px;
+  font-weight: bold;
+}
+
+.header a:hover {
+  background-color: #ddd;
+  color: black;
+}
+
+.header a.active {
+  background-color: lightpink;
+  color: white;
+}
+
+.header-right {
+  float: right;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-top: 10px;
+ 
+ 
+}
+
+  
+.logo-name {
+  display: flex;
+  align-items: flex-end;
+  width: 100%;
+  
+}
+
+h1 {
+  background-color: #aac4d2;
+  width: 100%;
+  padding: 10px;
+  margin: 10px 5px;
+  border-radius: 10px;
+  display: flex;
+  align-items: flex-end;
+  justify-content: center;
+  
+}
+
+:root {
+  --main-radius: 10px;
+  --main-padding: 20px;
+}
+
+.container {
+  display: grid;
+  height: 100vh;
+  grid-template-columns: 1fr;
+  grid-template-rows: 2.2fr 1.2fr 1.2fr 1.2fr 1.2fr 1.2fr 1.2fr 1.2fr 1.2fr 0.8fr;
+  grid-template-areas: 
+  "main"
+  "content1"
+  "content2"
+  "content3"
+  "content4"
+  "content5"
+  "content6"
+  "content7"
+  "content8"
+  "footer";
+  grid-gap: 20px;
+  font-weight: 800;
+  font-size: 18px;
+  color:#004d40;
+  text-align: center;
+}
+
+
+
+
+a:link {
+  text-decoration: none;
+  
+}
+
+a:visited {
+  text-decoration: none;
+  color:rgb(42, 28, 40);
+}
+
+a:hover {
+  text-decoration: none;
+  color: #61b6a2;
+}
+
+a:active {
+  text-decoration: underline;
+  
+}
+
+
+a.button {
+  background-color:#e3bfda;
+  color: black;
+  border-radius: 20px;
+  width: 150px;
+  padding: 10px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 13px;
+  margin: 10px;
+  cursor: pointer;
+  transition-duration: 0.4s;
+  
+}
+
+.button:hover {
+  background: rgb(160, 237, 246);
+}
+
+.main {
+  grid-area: main;
+  border-radius: var(--main-radius);
+  padding-top: var(--main-padding);
+
+}
+
+
+
+img.start {
+  width: 80%; 
+  margin: 10px;
+  border-radius: 2px;
+  
+      
+}
+
+h2 {
+  text-align: justify;
+  margin: 20px;
+  font-size: 20px;
+  
+}
+
+p {
+  font-size: 20px;
+  text-align: justify;
+  margin: 20px;
+
+}
+
+
+
+img.bouquet, img.sunflower, img.coralflower, 
+img.arrangemang, img.rose, img.daisy, img.blue, img.pink {
+  width: 50%;
+  border-radius: 2px;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 5px;
+
+}
+
+
+
+article {
+  font-size: 15px;
+  margin: 20px;
+  text-align: justify;
+
+
+}
+
+
+
+
+.content1 {
+  background: rgb(220, 220, 206);
+  grid-area: content1;
+  border-radius: var(--main-radius);
+  padding-top: var(--main-padding);
+}
+
+.content2 {
+  background:rgb(231, 218, 199);
+  grid-area: content2;
+  border-radius: var(--main-radius);
+  padding-top: var(--main-padding);
+}
+
+.content3 {
+  background: rgb(241, 241, 219);
+  grid-area: content3;
+  border-radius: var(--main-radius);
+  padding-top: var(--main-padding);
+}
+
+
+.content4 {
+  background: rgb(220, 220, 206);
+  grid-area: content4;
+  border-radius: var(--main-radius);
+  padding-top: var(--main-padding);
+}
+
+.content5 {
+  background: rgb(243, 228, 209);
+  grid-area: content5;
+  border-radius: var(--main-radius);
+  padding-top: var(--main-padding);
+}
+
+.content6 {
+  background:rgb(231, 218, 199);
+  grid-area: content6;
+  border-radius: var(--main-radius);
+  padding-top: var(--main-padding);
+}
+
+.content7 {
+  background: rgb(241, 241, 219);
+  grid-area: content7;
+  border-radius: var(--main-radius);
+  padding-top: var(--main-padding);
+}
+
+
+.content8 {
+  background: rgb(220, 220, 206);
+  grid-area: content8;
+  border-radius: var(--main-radius);
+  padding-top: var(--main-padding);
+}
+
+
+
+footer {
+  background: rgb(217, 231, 234);
+  grid-area: footer;
+  border-radius: var(--main-radius);
+  padding-top: var(--main-padding);
+  font-family: Garamond, serif;
+  font-size: 15px;
+  padding-bottom: 40px;
+  
+}
+
+img.logo {
+  
+  width: 80px;
+  height: 80px;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 5px;
+
+}
+
+a {
+  text-align: center;
+  display: grid;
+  font-family: inherit;
+  text-decoration: none;
+  font-weight: bold;
+  margin: 1rem;
+}
+
+
+@media (min-width: 667px) and (max-width: 1024px)  {
+  .container {
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 2.2fr 1.2fr 1.2fr 1.2fr 1.2fr 0.4fr;
+    grid-template-areas:
+      
+      "main main"
+      "content1 content2"
+      "content3 content4"
+      "content5 content6"
+      "content7 content8"
+      "footer footer"
+   }
+
+   img.start {
+      
+      width: 30%;
+      float: left;
+      margin-left: 30px;
+    
+   }
+
+  }
+
+
+  
+@media (min-width: 1025px) {
+  .container {
+    grid-template-columns: repeat(4, 1fr);
+    grid-template-rows: 2.2fr 1.2fr 1.2fr 0.2fr;
+    grid-template-areas:
+      
+      "main main main main"
+      "content1 content2 content3 content4"
+      "content5 content6 content7 content8"
+      "footer footer footer footer"
+   }
+
+   img.start {
+      
+      width: 30%;
+      float: left;
+      margin-left: 100px;
+     
+   }
+
+   h2 {
+    margin-right: 100px ;
+   }
+   
+   p {
+    margin-right: 100px ;
+   }
+  
+   }
+  
